test/units/TypingSpec/invalid/types/expected-type-nf-diff.algst
let x : dual (dual End!) = () in ()
